@@ -1,8 +1,3 @@
-## trino-operator
-trino operator for kubernetes
-
-
-
 ## How use it 
 1. install trino-operator
 ```shell
@@ -24,7 +19,6 @@ trino.tarim.deepexi.com/trino-sample created
 NAME           TOTALCPU   TOTALMEMORY   COORDINATORNUM   WORKERNUM   PAUSE
 trino-sample   3          3             1                2           false
 
-
 >  kubectl get pods
 NAME                                       READY   STATUS              RESTARTS   AGE
 trino-sample-coordinator-9c9d4c79b-lmctw   0/1     ContainerCreating   0          51s
@@ -38,107 +32,21 @@ trino-sample-nodeservice   NodePort    10.98.149.214    <none>        8080:31295
 trino-sample-trino         ClusterIP   10.109.139.133   <none>        8080/TCP         84s
 ```
 
-when trino-sample-coordinator is ready, you can visit [http://nodeIp:nodePort](http://nodeIp:31295),you can see the trino web ui 
+#### when trino-sample-coordinator is ready,visit [http://nodeIp:nodePort](http://nodeIp:31295)
 ![web-ui](./doc/image/web-ui.png)
 
-you can see the coordinator and worker status in trino status
+#### see the coordinator and worker status in trino status
 
 ```shell
-> kubectl get trinos.tarim.deepexi.com trino-sample
-NAME           TOTALCPU   TOTALMEMORY   COORDINATORNUM   WORKERNUM   PAUSE
-trino-sample   3          3             1                2           false
-
 > kubectl get trinos.tarim.deepexi.com trino-sample -oyaml 
 apiVersion: tarim.deepexi.com/v1
 kind: Trino
 metadata:
-  annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"tarim.deepexi.com/v1","kind":"Trino","metadata":{"annotations":{},"name":"trino-sample","namespace":"default"},"spec":{"cataLogConfig":{"tpcdsProperties":"connector.name=tpcds\ntpcds.splits-per-node=4\n","tpchProperties":"connector.name=tpch\ntpch.splits-per-node=4\n"},"coordinatorConfig":{"configProperties":"coordinator=true\nnode-scheduler.include-coordinator=false\nhttp-server.http.port=8080\nquery.max-memory=1GB\nquery.max-memory-per-node=512MB\nquery.max-total-memory-per-node=1GB\nmemory.heap-headroom-per-node=512MB\ndiscovery.uri=http://localhost:8080\n","cpuRequest":1,"jvmConfig":"-server\n-Xmx2G\n-XX:+UseG1GC\n-XX:G1HeapRegionSize=32M\n-XX:+UseGCOverheadLimit\n-XX:+ExplicitGCInvokesConcurrent\n-XX:+HeapDumpOnOutOfMemoryError\n-XX:+ExitOnOutOfMemoryError\n-Djdk.attach.allowAttachSelf=true\n-XX:-UseBiasedLocking\n-XX:ReservedCodeCacheSize=512M\n-XX:PerMethodRecompilationCutoff=10000\n-XX:PerBytecodeRecompilationCutoff=10000\n-Djdk.nio.maxCachedBufferSize=2000000\n","logProperties":"io.trino=INFO\n","memoryRequest":1000,"nodeProperties":"node.environment=production\nnode.data-dir=/data/trino\nplugin.dir=/usr/lib/trino/plugin\n","num":1},"nodePort":true,"pause":false,"workerConfig":{"configProperties":"coordinator=false\nnode-scheduler.include-coordinator=false\nhttp-server.http.port=8080\nquery.max-memory=1GB\nquery.max-memory-per-node=512MB\nquery.max-total-memory-per-node=1GB\nmemory.heap-headroom-per-node=512MB\ndiscovery.uri=http://trino-sample-trino:8080\n","cpuRequest":1,"jvmConfig":"-server\n-Xmx2G\n-XX:+UseG1GC\n-XX:G1HeapRegionSize=32M\n-XX:+UseGCOverheadLimit\n-XX:+ExplicitGCInvokesConcurrent\n-XX:+HeapDumpOnOutOfMemoryError\n-XX:+ExitOnOutOfMemoryError\n-Djdk.attach.allowAttachSelf=true\n-XX:-UseBiasedLocking\n-XX:ReservedCodeCacheSize=512M\n-XX:PerMethodRecompilationCutoff=10000\n-XX:PerBytecodeRecompilationCutoff=10000\n-Djdk.nio.maxCachedBufferSize=2000000\n","logProperties":"io.trino=INFO\n","memoryRequest":1000,"nodeProperties":"node.environment=production\nnode.data-dir=/data/trino\nplugin.dir=/usr/lib/trino/plugin\n","num":2}}}
-  creationTimestamp: "2021-10-09T08:55:53Z"
   generation: 1
   name: trino-sample
   namespace: default
-  resourceVersion: "18376"
-  uid: 53528151-1d26-4203-a37f-162bc6d91459
 spec:
-  cataLogConfig:
-    tpcdsProperties: |
-      connector.name=tpcds
-      tpcds.splits-per-node=4
-    tpchProperties: |
-      connector.name=tpch
-      tpch.splits-per-node=4
-  coordinatorConfig:
-    configProperties: |
-      coordinator=true
-      node-scheduler.include-coordinator=false
-      http-server.http.port=8080
-      query.max-memory=1GB
-      query.max-memory-per-node=512MB
-      query.max-total-memory-per-node=1GB
-      memory.heap-headroom-per-node=512MB
-      discovery.uri=http://localhost:8080
-    cpuRequest: 1
-    jvmConfig: |
-      -server
-      -Xmx2G
-      -XX:+UseG1GC
-      -XX:G1HeapRegionSize=32M
-      -XX:+UseGCOverheadLimit
-      -XX:+ExplicitGCInvokesConcurrent
-      -XX:+HeapDumpOnOutOfMemoryError
-      -XX:+ExitOnOutOfMemoryError
-      -Djdk.attach.allowAttachSelf=true
-      -XX:-UseBiasedLocking
-      -XX:ReservedCodeCacheSize=512M
-      -XX:PerMethodRecompilationCutoff=10000
-      -XX:PerBytecodeRecompilationCutoff=10000
-      -Djdk.nio.maxCachedBufferSize=2000000
-    logProperties: |
-      io.trino=INFO
-    memoryRequest: 1000
-    nodeProperties: |
-      node.environment=production
-      node.data-dir=/data/trino
-      plugin.dir=/usr/lib/trino/plugin
-    num: 1
-  nodePort: true
-  pause: false
-  workerConfig:
-    configProperties: |
-      coordinator=false
-      node-scheduler.include-coordinator=false
-      http-server.http.port=8080
-      query.max-memory=1GB
-      query.max-memory-per-node=512MB
-      query.max-total-memory-per-node=1GB
-      memory.heap-headroom-per-node=512MB
-      discovery.uri=http://trino-sample-trino:8080
-    cpuRequest: 1
-    jvmConfig: |
-      -server
-      -Xmx2G
-      -XX:+UseG1GC
-      -XX:G1HeapRegionSize=32M
-      -XX:+UseGCOverheadLimit
-      -XX:+ExplicitGCInvokesConcurrent
-      -XX:+HeapDumpOnOutOfMemoryError
-      -XX:+ExitOnOutOfMemoryError
-      -Djdk.attach.allowAttachSelf=true
-      -XX:-UseBiasedLocking
-      -XX:ReservedCodeCacheSize=512M
-      -XX:PerMethodRecompilationCutoff=10000
-      -XX:PerBytecodeRecompilationCutoff=10000
-      -Djdk.nio.maxCachedBufferSize=2000000
-    logProperties: |
-      io.trino=INFO
-    memoryRequest: 1000
-    nodeProperties: |
-      node.environment=production
-      node.data-dir=/data/trino
-      plugin.dir=/usr/lib/trino/plugin
-    num: 2
+  ...
 status:
 # coordinator status
   coordinatorPod:
@@ -226,8 +134,8 @@ spec:
     # default 2048
     memoryRequest: 1000
   workerConfig:
-    # is improtant, jvm will not work if you use error config.
-    # you need change query.max-memory,query.max-memory-per-node,query.max-total-memory-per-node,memory.heap-headroom-per-node.
+    # is improtant, jvm will not work if  use error config.
+    # change query.max-memory,query.max-memory-per-node,query.max-total-memory-per-node,memory.heap-headroom-per-node.
     # In general:
     #     query.max-memory is bigger then query.max-memory-per-node.
     #     query.max-total-memory-per-node  is bigger then memory.heap-headroom-per-node.
@@ -286,8 +194,8 @@ spec:
 #### version 0.1
 - [X] Basis function
 - [X] add a trino cluster in kubernetes
-- [X] edit crds to if you change config, restart the necessary parts
-- [X] add or delete worker when you just change the num
+- [X] edit crds to change config, restart the necessary parts
+- [X] add or delete worker when just change the num
 - [X] watch deployment and pod, logs trino coordinator and worker status in **trinos** status items
 
 
